# SetGeometry

./: AuxFunctions.cpp  AuxFunctions.h  CMakeLists.txt  LICENSE  README.md  collpar.cpp  collpar.h  domainpoints.cpp  domainpoints.h  lattice.cpp  lattice.h  line2d.cpp  line2d.h  main.cpp  point2d.cpp  point2d.h  polygon.cpp  polygon.h
